Disabled some unittest code related to implementation of NAS-1895 (ExtendedField functionality). Needs to be fixed properly: NAS-1925